# ari

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONFIG-EXAMPLES.md  CONFIG-SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  ENROLLMENT-PHASES.md  ENROLMENT-PHASE1.md  ENROLMENT-PHASES.md  LICENSE  README.md  RUNNING.md  SECURITY.md  justfile  osv-scanner.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  dco.yml  dependency-review.yml  md-lint.yml  osv-scanner.yml  rust.yml  scorecard.yml
config/: another-member.toml  bootstrap.toml  member.toml
docs/decisions/: 0000-use-markdown-architectural-decision-records.md  0001-use-EUPL-as-license.md  0002-use-shim-layer-abstraction.md  0003-use-actor-based-hybrid-concurrency.md  index.md  (+13 more)
src/: actors.rs  cdap.rs  config.rs  directory.rs  efcp.rs  enrollment.rs  enrolment.rs  error.rs  fal.rs  inter_ipcp_fal.rs  ipcp.rs  lib.rs  main.rs  pdu.rs  rib.rs  rmt.rs  routing.rs  shim.rs
tests/: integration_enrollment_phase3_test.rs  integration_flow_test.rs  integration_reenrollment_test.rs  integration_rib_sync_test.rs  test_cdap_serialization.rs
tmp-ai/: 20260203-claude-response-to-gemini.md  20260203-gemini-code-critique.md  20260206-claude-response-to-gemini.md  20260206-gemini-code-critique.md  CLAUDE-RESPONSE.md  DYNAMIC-ROUTE-LEARNING.md  GEMINI-CRITIQUE.md  PHASE1-IMPLEMENTATION.md  PHASE2-IMPLEMENTATION.md  PHASE3-IMPLEMENTATION.md  PHASE4-IMPLEMENTATION.md  PHASE5-IMPLEMENTATION.md  PHASE6-IMPLEMENTATION-COMPLETE.md  PHASE6-INCREMENTAL-RIB-SYNC.md  PHASES4-5-SUMMARY.md
(+4 files in other folders)
