[package]
name = "ari"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2-or-later"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
