[package]
name = "ari"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2-or-later"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
toml = "1.0"
thiserror = "2.0"
